--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=DEBUG
 logging.level.org.apache.catalina=DEBUG
+logging.level.org.springframework.security=DEBUG
